--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/plantsdb
-spring.datasource.username=root
-spring.datasource.password=dANZAN1@
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 server.port=8082
 
 spring.security.user.name=foo
